src/features/GameBoard/GameEdge.module.css
@import "../../styles/mixins.css";

.edge {
  position: absolute;
  display: flex;
  transform: translate(-50%, -50%);
  user-select: none;
  display: flex;
  align-items: center;
  justify-content: center;

  &[data-state="selected"] {
    background-color: var(--primary-color);
    color: var(--text-on-primary-color);
  }

  &[data-state="subtle-highlighted"] {
    border: 0.125rem solid var(--border-color);
  }

  &[data-orientation="horizontal"] {
    width: var(--node-gap);
    height: var(--node-size);
    left: calc(
      var(--node-size) + var(--node-gap) / 2 + var(--column) *
        (var(--node-gap) + var(--node-size))
    );
    top: calc(
      var(--node-size) / 2 + var(--row) * (var(--node-gap) + var(--node-size))
    );

    &[data-state="highlighted"] {
      background-color: var(--border-color);
      @mixin shinyAnimationHorizontal;
    }
  }

  &[data-orientation="vertical"] {
    width: var(--node-size);
    height: var(--node-gap);

    top: calc(
      var(--node-size) + var(--node-gap) / 2 + var(--row) *
        (var(--node-gap) + var(--node-size))
    );
    left: calc(
      var(--node-size) / 2 + var(--column) *
        (var(--node-gap) + var(--node-size))
    );

    &[data-state="highlighted"] {
      background-color: var(--border-color);
      @mixin shinyAnimationVertical;
    }
  }
}

